--- a/src/styles/layout/_data.scss
+++ b/src/styles/layout/_data.scss
@@ -1,6 +1,6 @@
 .data {
   text-align: center;
-  margin-top: 15rem;
+  margin-top: 5rem;
   line-height: 5rem;
 }
 
